fix(tile-view): hide any horizontal overflow

--- a/css/filmstrip/_tile_view.scss
+++ b/css/filmstrip/_tile_view.scss
@@ -62,9 +62,10 @@
         box-sizing: border-box;
 
         /**
-         * Allow scrolling of the thumbnails.
+         * Allow vertical scrolling of the thumbnails.
          */
-        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
     }
 
     /**
